모듈 이름 변경 / 레포지터리 중복 제거