@@ -8,7 +8,6 @@ import org.slf4j.LoggerFactory;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.format.DateTimeFormatter;
 import java.util.Date;
@@ -18,7 +17,7 @@ import java.util.Properties;
 public class CompressServerMain {
     private static final Logger logger = LoggerFactory.getLogger(CompressServerMain.class);
     private final AppWorkConfig appWorkConfig = new AppWorkConfig();
-    private final Properties properties = Utils.setConfig(Path.of("./.config"), Map.of());
+    private final Properties properties = Utils.setConfig(Paths.get("."), Paths.get("./.config"), Map.of());
 
     private void deleteTemp() {
 
@@ -48,24 +47,23 @@ public class CompressServerMain {
         String mainServer = properties.getProperty("MAIN_SERVER");
         String mainServerCredential = mainServerAccount+"@"+mainServer;
 
-        File workDir = new File(".");
-        appWorkConfig.setBaseDirectory(workDir);
+        appWorkConfig.setBaseDirectory(new File(properties.getProperty("WORK_DIR")));
         appWorkConfig.setPODirectory(new File(appWorkConfig.getBaseDirectory()+"/PO_"+appWorkConfig.getToday()));
-        File lang = new File(appWorkConfig.getBaseDirectory()+"/lang_"+appWorkConfig.getTodayWithYear()+".7z");
+        var lang = Paths.get(appWorkConfig.getBaseDirectory()+"/lang_"+appWorkConfig.getTodayWithYear()+".7z").toAbsolutePath();
 
         try {
             logger.info("CSV 다운로드");
             Utils.processRun(appWorkConfig.getBaseDirectory(),"scp "+mainServerCredential+":"+properties.getProperty("MAIN_SERVER_PO_PATH")+appWorkConfig.getToday()+"/*.csv .");
             logger.info("CSV 압축");
-            Utils.processRun(appWorkConfig.getBaseDirectory(),"7za a -mx=7 " + lang.getAbsolutePath() + " " + appWorkConfig.getBaseDirectory() + "/*.csv");
+            Utils.processRun(appWorkConfig.getBaseDirectory(),"7za a -mx=7 " + lang + " " + appWorkConfig.getBaseDirectory() + "/*.csv");
             logger.info("SFX 생성");
-            Utils.processRun(appWorkConfig.getBaseDirectory(),"cat 7zCon.sfx "+lang.getAbsolutePath(), ProcessBuilder.Redirect.to(new File(lang.getAbsolutePath()+".exe")));
+            Utils.processRun(appWorkConfig.getBaseDirectory(),"cat 7zCon.sfx "+lang, ProcessBuilder.Redirect.to(new File(lang+".exe")));
             logger.info("기존 업로드된 SFX 삭제");
             Utils.processRun(appWorkConfig.getBaseDirectory(),"gsutil rm gs://dcinside-esok-cdn/lang*.exe");
             logger.info("SFX 업로드");
-            Utils.processRun(appWorkConfig.getBaseDirectory(),"gsutil cp "+lang.getAbsolutePath()+".exe gs://dcinside-esok-cdn/");
+            Utils.processRun(appWorkConfig.getBaseDirectory(),"gsutil cp "+lang+".exe gs://dcinside-esok-cdn/");
             logger.info("버전 문서 생성");
-            Utils.processRun(appWorkConfig.getBaseDirectory(),"echo "+new Date().getTime()+"/"+appWorkConfig.getTodayWithYear()+"/"+Utils.CRC32(new File(lang.getAbsolutePath()+".exe")), ProcessBuilder.Redirect.to(new File("./ver.html")));
+            Utils.processRun(appWorkConfig.getBaseDirectory(),"echo "+new Date().getTime()+"/"+appWorkConfig.getTodayWithYear()+"/"+Utils.CRC32(Paths.get(lang+".exe")), ProcessBuilder.Redirect.to(new File("./ver.html")));
             logger.info("버전 문서 업로드");
             Utils.processRun(appWorkConfig.getBaseDirectory(),"scp ./ver.html "+mainServerCredential+":"+properties.getProperty("MAIN_SERVER_VERSION_DOCUMENT_PATH"));
             logger.info("잔여 파일 삭제");
